--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "pragmarx/google2fa-laravel": "^1.4",
         "rachidlaasri/laravel-installer": "^4.1",
         "spatie/laravel-permission": "^4.2",
-        "yajra/laravel-datatables": "^1.5"
+        "yajra/laravel-datatables": "^1.5",
+        "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
